--- a/TicTacToe/Views/Home/Index.cshtml
+++ b/TicTacToe/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>@Localizer["Title"]</h2>
 <div class="row">
     <div class="col-lg-12">
         <h2>Tic-Tac-Toe</h2>
