--- a/TicTacToe/Views/UserRegistration/Index.cshtml
+++ b/TicTacToe/Views/UserRegistration/Index.cshtml
@@ -1,13 +1,9 @@
 ﻿@model TicTacToe.Models.UserModel
-
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = Localizer["Title"];
 }
-
-<h2>Index</h2>
-
-<h4>UserModel</h4>
+<h2>@ViewData["Title"]</h2>
+<h4>@Localizer["SubTitle"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,8 +35,6 @@
         </form>
     </div>
 </div>
-
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
