Chapter 6 - Creating MVC Applications

--- a/TicTacToe/Views/GameInvitation/Index.cshtml
+++ b/TicTacToe/Views/GameInvitation/Index.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h4>GameInvitationModel</h4>
+@section Desktop{<h2>@Localizer["DesktopTitle"]</h2>}
+@section Mobile {<h2>@Localizer["MobileTitle"]</h2>}
 <hr />
 <div class="row">
     <div class="col-md-4">
