--- a/TicTacToe/Views/Home/Index.cshtml
+++ b/TicTacToe/Views/Home/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>@Localizer["Title"]</h2>
 <div class="row">
     <div class="col-lg-12">
-        <h2>Tic-Tac-Toe</h2>
+        @section Desktop {<h2>@Localizer["DesktopTitle"]</h2>}
+        @section Mobile {<h2>@Localizer["MobileTitle"]</h2>}
         <div class="alert alert-info">
             <p>Tic-Tac-Toe is a two-player turn-based game.</p>
             <p>Two players will choose who takes the Xs and who takes the Os. They will then be taking turns and mark spaces in a 3×3 grid by putting their marks, one mark per turn.</p>
