--- a/TicTacToe/Views/Shared/Components/GameSession/default.cshtml
+++ b/TicTacToe/Views/Shared/Components/GameSession/default.cshtml
@@ -3,21 +3,19 @@
 @{
     var email = Context.Session.GetString("email");
 }
-@if (Model.ActiveUser?.Email == email)
-{
+<div id="gameBoard">
     <table>
         @for (int rows = 0; rows < 3; rows++)
         {
             <tr style="height:150px;">
                 @for (int columns = 0; columns < 3; columns++)
                 {
-                    <td style="width:150px; border:1px solid #808080">
+                    <td style="width:150px; border:1px solid #808080" id="@($"c_{rows}_{columns}")">
                         @{
                             var position = Model.Turns?.FirstOrDefault(turn => turn.X == columns && turn.Y == rows);
-
                             if (position != null)
                             {
-                                if (position.User?.Email == "Player1")
+                                if (position.User == Model.User1)
                                 {
                                     <i class="glyphicon glyphicon-unchecked" style="width:100%;height:100%"></i>
                                 }
@@ -28,7 +26,7 @@
                             }
                             else
                             {
-                                <a asp-action="SetPosition" asp-controller="GameSession" asp-route-id="@Model.Id" asp-route-email="@email" class="btn btn-default" style="width:150px; min-height:150px;">
+                                <a class="btn btn-default btn-SetPosition" style="width:150px; min-height:150px;" data-X="@columns" data-Y="@rows">
                                     &nbsp;
                                 </a>
                             }
@@ -38,10 +36,7 @@
             </tr>
         }
     </table>
-}
-else
-{
-    <div class="alert">
-        <i class="glyphicon glyphicon-alert">Please wait until the other user has finished his turn.</i>
-    </div>
-}
+</div>
+<div class="alert" id="divAlertWaitTurn">
+    <i class="glyphicon glyphicon-alert">Please wait until the other user has finished his turn.</i>
+</div>
