--- a/TicTacToe/Views/Shared/_Account.cshtml
+++ b/TicTacToe/Views/Shared/_Account.cshtml
@@ -27,8 +27,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <p>
-                            <a href="#" class="btn btn-danger btn-block">Log off</a>
-                            <a class="btn btn-default btn-block" asp-action="Index" asp-controller="Account">View Details</a>
+                            <a class="btn btn-danger btn-block" asp-controller="Account" asp-action="Logout" asp-area="">Log Off</a>
+                            <a class="btn btn-default btn-block" asp-action="Index" asp-controller="Home" asp-area="Account">View Details</a>
                         </p>
                     </div>
                 </div>
