Chapter 11 - Managing and Supervising ASP.NET Core 2.0 Applications

--- a/TicTacToe/Views/_ViewImports.cshtml
+++ b/TicTacToe/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @addTagHelper *, TicTacToe
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
